gitignore for pycharm

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 config.py
+config.py
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/TeamKiwi.iml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/vcs.xml
+config.py
+content/test.md
+user/users.json
+wiki/__pycache__/__init__.cpython-37.pyc
+wiki/__pycache__/core.cpython-37.pyc
+wiki/web/__pycache__/__init__.cpython-37.pyc
+wiki/web/__pycache__/forms.cpython-37.pyc
+wiki/web/__pycache__/routes.cpython-37.pyc
+wiki/web/__pycache__/user.cpython-37.pyc
