--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ wiki/web/__pycache__/__init__.cpython-37.pyc
 wiki/web/__pycache__/forms.cpython-37.pyc
 wiki/web/__pycache__/routes.cpython-37.pyc
 wiki/web/__pycache__/user.cpython-37.pyc
+config.py
